[project]
name = "jacob-pro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jacob", email = "jacob8753@gmail.com"},
]
dependencies = []
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
air = [
    "apache-airflow==2.10.3",
]
